14. Security and Authentication: Started the logic of OAuth

--- a/14. Security and Authentication/security-example/public/index.html
+++ b/14. Security and Authentication/security-example/public/index.html
@@ -7,5 +7,11 @@
   </head>
   <body>
     <h1>Ihaa</h1>
+    <p>Here's your secret:</p>
+    <div style="display: flex; flex-direction: column">
+      <a href="/secret">Show me!</a>
+      <a href="/auth/google">Google Login</a>
+      <a href="/auth/logout">Sign Out</a>
+    </div>
   </body>
 </html>
